--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -881,220 +881,29 @@ section.lazy-placeholder:after {
 .cid-rZn1pgcw9Y .mbr-text {
   color: #232323;
 }
-.cid-s2osFwpNs5 {
-  padding-top: 30px;
-  padding-bottom: 90px;
+.cid-s4R5rXxeWC {
+  padding-top: 45px;
+  padding-bottom: 15px;
   background-color: #000000;
 }
-.cid-s2osFwpNs5 .row {
-  margin-left: 0;
-  margin-right: 0;
+.cid-s4R5rXxeWC P {
+  color: #767676;
 }
-.cid-s2osFwpNs5 .item {
-  padding-left: 0;
-  padding-right: 0;
+.cid-s4R5rXxeWC H1 {
+  color: #ffffff;
 }
-.cid-s2osFwpNs5 .item-wrapper {
-  height: 100%;
+.cid-s4R5uSitHk {
+  background: #000000;
+  padding-top: 15px;
+  padding-bottom: 45px;
 }
-.cid-s2osFwpNs5 .item-wrapper img {
-  height: 100%;
-  object-fit: cover;
-}
-.cid-s2osFwpNs5 .carousel-control,
-.cid-s2osFwpNs5 .close {
-  background: #1b1b1b;
-}
-.cid-s2osFwpNs5 .carousel-control-prev {
-  margin-left: 2.5rem;
-}
-.cid-s2osFwpNs5 .carousel-control-next {
-  margin-right: 2.5rem;
-}
-.cid-s2osFwpNs5 .close {
-  position: fixed;
-  opacity: 0.5;
-  font-size: 35px;
-  font-weight: 300;
-  width: 70px;
-  height: 70px;
-  border-radius: 50%;
-  color: #fff;
-  top: 2.5rem;
-  right: 2.5rem;
-  line-height: 70px;
-  border: none;
-  text-align: center;
-  text-shadow: none;
-  z-index: 5;
-  -webkit-transition: opacity 0.3s ease;
-  -moz-transition: opacity 0.3s ease;
-  -o-transition: opacity 0.3s ease;
-  transition: opacity 0.3s ease;
-  font-family: 'MobiriseIcons';
-}
-.cid-s2osFwpNs5 .close::before {
-  content: '\e91a';
-}
-.cid-s2osFwpNs5 .close:hover {
-  opacity: 1;
-  background: #000;
-  color: #fff;
-}
-.cid-s2osFwpNs5 .carousel-control {
-  position: fixed;
-  width: 70px;
-  height: 70px;
-  top: 50%;
-  margin-top: -35px;
-  line-height: 70px;
-  border-radius: 50%;
-  font-size: 35px;
-  border: 0;
-  opacity: 0.5;
-  text-shadow: none;
-  z-index: 5;
-  color: #fff;
-  -webkit-transition: all 0.2s ease-in-out 0s;
-  -o-transition: all 0.2s ease-in-out 0s;
-  transition: all 0.2s ease-in-out 0s;
-}
-.cid-s2osFwpNs5 .carousel-inner > .active {
-  display: block;
-}
-.cid-s2osFwpNs5 .carousel-control.left {
-  left: 0;
-  margin-left: 2.5rem;
-}
-.cid-s2osFwpNs5 .carousel-control.right {
-  right: 0;
-  margin-right: 2.5rem;
-}
-.cid-s2osFwpNs5 .carousel-control .icon-next,
-.cid-s2osFwpNs5 .carousel-control .icon-prev {
-  margin-top: -18px;
-  font-size: 40px;
-  line-height: 27px;
-}
-.cid-s2osFwpNs5 .carousel-control:hover {
-  background: #1b1b1b;
-  color: #fff;
-  opacity: 1;
+.cid-s4R5uSitHk .video-block {
+  margin: auto;
 }
 @media (max-width: 768px) {
-  .cid-s2osFwpNs5 .carousel-control,
-  .cid-s2osFwpNs5 .carousel-indicators,
-  .cid-s2osFwpNs5 .modal .close {
-    position: fixed;
+  .cid-s4R5uSitHk .video-block {
+    width: 100% !important;
   }
-}
-@media (max-width: 767px) {
-  .cid-s2osFwpNs5 .mbr-slider .carousel-control {
-    top: auto;
-    bottom: 20px;
-  }
-  .cid-s2osFwpNs5 .mbr-slider > .container .carousel-control {
-    margin-bottom: 0;
-  }
-}
-.cid-s2osFwpNs5 .carousel-indicators {
-  bottom: 0;
-  margin-bottom: 3px;
-}
-@media (max-width: 991px) {
-  .cid-s2osFwpNs5 .carousel-indicators {
-    margin-bottom: 3.625rem !important;
-    padding-left: 2.5rem;
-    padding-right: 2.5rem;
-  }
-}
-@media (max-width: 767px) {
-  .cid-s2osFwpNs5 .carousel-indicators {
-    display: none;
-  }
-}
-.cid-s2osFwpNs5 .carousel-indicators .active,
-.cid-s2osFwpNs5 .carousel-indicators li {
-  width: 7px;
-  height: 7px;
-  margin: 3px;
-  background: #1b1b1b;
-  opacity: 0.5;
-  border: 4px solid #1b1b1b;
-}
-.cid-s2osFwpNs5 .carousel-indicators .active {
-  background: #fff;
-}
-.cid-s2osFwpNs5 .carousel-indicators li {
-  max-width: 15px;
-  max-height: 15px;
-  border-radius: 50%;
-}
-.cid-s2osFwpNs5 .modal {
-  padding-left: 0 !important;
-  position: fixed;
-  overflow: hidden;
-  padding-right: 0 !important;
-}
-.cid-s2osFwpNs5 .modal-dialog {
-  margin: 0 auto;
-  max-width: 100%;
-  padding-left: 1rem;
-  padding-right: 1rem;
-}
-.cid-s2osFwpNs5 .modal-content {
-  border-radius: 0;
-  border: none;
-  background: transparent;
-}
-.cid-s2osFwpNs5 .modal-body {
-  padding: 0;
-  display: flex;
-  align-items: center;
-}
-.cid-s2osFwpNs5 .modal-body .carousel-item {
-  top: 50%;
-  transform: translateY(-50%);
-}
-.cid-s2osFwpNs5 .modal-body img {
-  width: 100%;
-  object-fit: contain;
-  max-height: calc(100vh - 1.75rem);
-}
-.cid-s2osFwpNs5 .carousel {
-  width: 100%;
-}
-.cid-s2osFwpNs5 .modal-backdrop.in {
-  opacity: 0.8;
-}
-.cid-s2osFwpNs5 .modal.fade .modal-dialog {
-  -webkit-transition: margin-top 0.3s ease-out;
-  -moz-transition: margin-top 0.3s ease-out;
-  -o-transition: margin-top 0.3s ease-out;
-  transition: margin-top 0.3s ease-out;
-}
-.cid-s2osFwpNs5 .modal.fade .modal-dialog,
-.cid-s2osFwpNs5 .modal.in .modal-dialog {
-  -webkit-transform: none;
-  -ms-transform: none;
-  -o-transform: none;
-  transform: none;
-}
-.cid-s2osFwpNs5 .mbr-gallery .item-wrapper {
-  cursor: pointer;
-}
-.cid-s2osFwpNs5 a {
-  display: block;
-}
-.cid-s2osFwpNs5 a.img {
-  pointer-events: none;
-}
-.cid-s2osFwpNs5 H4 {
-  text-align: center;
-  color: #ffffff;
-}
-.cid-s2osFwpNs5 H3 {
-  color: #ffffff;
 }
 .cid-s2cZ0OBYDm {
   padding-top: 60px;
